# csv_median_calc

./: CMakeLists.txt  README.md  config.toml  specs.md
examples/input/: btcusdt_level_2024.csv  btcusdt_trade_2024.csv
src/: config_parser.hpp  csv_reader.hpp  main.cpp  median_calculator.hpp  stats_aggregator.hpp
tests/: TESTS.md
tests/test1/expected/: median_result.csv
tests/test1/input/: trade.csv
tests/test2/expected/: median_result.csv
tests/test2/input/: trade.csv
tests/test3/expected/: median_result.csv
tests/test3/input/: trade.csv
tests/test4/expected/: median_result.csv
tests/test4/input/: trade.csv
tests/test5/expected/: median_result.csv
tests/test5/input/: trade.csv
tests/test6/expected/: median_result.csv
tests/test6/input/: trade.csv
tests/test7/expected/: median_result.csv
tests/test7/input/: trade.csv
tests/test8/expected/: median_result.csv
tests/test8/input/: level.csv  trade.csv
tests/unit/: test_config_parser.cpp  test_csv_reader.cpp  test_median_calculator.cpp  test_stats_aggregator.cpp
